@@ -1,5 +1,5 @@
 /*
-    Copyright 2003-2010, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 2003-2013,Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -17,4 +17,5 @@
 #include <fost/coerce.hpp>
 #include <fost/detail/coerce.hpp>
 #include <fost/settings.hpp>
-#include <fost/detail/utility-nullable.hpp>
+#include <fost/utility-nullable.hpp>
+
